# PhoOfflineEEGAnalysis

./: .gitignore  pyproject.toml
examples_jupyter/: _OLD_analyze_saved_EEG_Recordings.ipynb  analyze_flutter_exported_recordings.ipynb  analyze_saved_EEG_Recordings.ipynb  analyze_saved_EEG_Recordings_collab.ipynb  render_custom_spectogram.ipynb
src/phoofflineeeganalysis/: EegVisualization.py  PendingNotebookCode.py  __init__.py  tzinfo_examples.py
src/phoofflineeeganalysis/analysis/: EEG_data.py  MNE_helpers.py  SavedSessionsProcessor.py  anatomy_and_electrodes.py  event_data.py  historical_data.py  motion_data.py
src/phoofflineeeganalysis/analysis/UI/: CustomCalendarWidget.py  spectrogram_gui.py
src/phoofflineeeganalysis/helpers/: indexing_helpers.py
