[project]
name = "phoofflineeeganalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pho Hale", email = "PhoHale@gmail.com" }
]
requires-python = ">=3.9,<3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "scipy>=1.13.1",
    "setuptools>=80.4.0",
    "wheel>=0.45.1",
    "numpy~=1.20",
    "qtpy>=2.4.3",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.0",
    "pyqt5singleton>=0.1,<0.2",
    "matplotlib==3.8.4",
    "mplcursors>=0.6",
    "cython>=3.1.2",
    "scikit-learn>=1.6.1",
    "nptyping>=2.5.0",
    "pandas>=1.5.3,<3.0.0",
    "pyinstaller>=6.14.2",
    "pyphoplacecellanalysis",
    "autoreject>=0.4.3",
    "pylsl>=1.16.2",
    "mne-lsl>=1.6.1",
    "mne>=1.8.0",
    "mne-bids>=0.15.0",
    "mne-connectivity>=0.7.0",
    "mne-qt-browser>=0.6.3",
    "xarray[complete]>=2024.3.0",
    "napari>=0.4.19.post1",
    "lxml[html-clean]>=6.0.2",
    "hmmlearn>=0.3.3",
    "pyedflib>=0.1.42",
    "pyxdf>=1.16.8",
    "dill>=0.3.5.1",
    "h5py>=3.14.0",
    "fooof>=1.1.1",
    "pycryptodome>=3.23.0",
    "python-benedict>=0.28.3,<0.29",
    "mnelab>=0.8.6",
    "h5netcdf>=1.6.4",
]

[project.scripts]
phoofflineeeganalysis = "phoofflineeeganalysis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyphoplacecellanalysis = { path = "../pyPhoPlaceCellAnalysis", editable = true }
